--- a/css/style.css
+++ b/css/style.css
@@ -7,14 +7,15 @@
 }
 
 .product-card{
-  width: 450px;
+  width: 340px;
   height: 240px;
   padding: 10px;
+  word-wrap: break-word;
 }
 
 .product-img{
-  width: 220px;
-  height: 220px;
+  width: 140px;
+  height: 140px;
 }
 
 .product-cart{
@@ -22,7 +23,20 @@
   height: 100px;
 }
 
+.product-info{
+  width: 26vw;
+}
+
 a{
   color: unset;
   text-decoration: none;
+}
+
+.wrap{
+  text-wrap: nowrap;
+}
+
+.link-style{
+  color: cadetblue; 
+  text-decoration: underline;
 }
