--- a/css/style.css
+++ b/css/style.css
@@ -37,7 +37,7 @@ button {
     visibility: visible !important;
     height: calc(100% - var(--topNavbarHeight));
     top: var(--topNavbarHeight);
-  }
+  }}
 
 .center-text{
   text-align: center;
