--- a/css/style.css
+++ b/css/style.css
@@ -37,7 +37,7 @@ button {
     visibility: visible !important;
     height: calc(100% - var(--topNavbarHeight));
     top: var(--topNavbarHeight);
-  }
+  }}
 
 .center-text{
   text-align: center;
@@ -48,8 +48,8 @@ button {
 }
 
 .product-card{
-  width: 340px;
-  height: 240px;
+  width: 400px;
+  height: 260px;
   padding: 10px;
   word-wrap: break-word;
 }
